# emb-predict

./: .dvcignore  .gitignore  CITATION.cff  Dockerfile  LICENSE.txt  README.md  config.production.yml  config.yml  docker-compose.yml  pyproject.toml
notebook/: embpredict.ipynb
scripts/: gpu.py
src/emb_predict/: api.py  application.py  predict.py  prepare.py  train.py  utils.py
src/emb_predict/data_source/: opentargets.py
src/emb_predict/embeddings/: embeddings.py  llm_embed.py  mt_embed.py
src/emb_predict/vectordb/: docker-compose.yml  qdrant_config.yml  vectordb.py
tests/: __init__.py  test_model.py
vectordb/: docker-compose.yml  qdrant_config.yml
